[tool.poetry]
name = "novabot_plugin_picsearcher_adv"
version = "0.1.0"
description = "Nova-Bot plugin help you to find the source of (Anime) Images."
authors = ["NovaNo1r <mail@novanoir.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
diskcache = "^5.4.0"
picimagesearch = "^3.3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
